--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
-# используем язык java. Travis CI поддерживает другие языки тоже.
+# РёСЃРїРѕР»СЊР·СѓРµРј СЏР·С‹Рє java. Travis CI РїРѕРґРґРµСЂР¶РёРІР°РµС‚ РґСЂСѓРіРёРµ СЏР·С‹РєРё С‚РѕР¶Рµ.
 language: java
 jdk:
  - openjdk14
 
-# используем режим обычного пользователя для сборки проекта.
+# РёСЃРїРѕР»СЊР·СѓРµРј СЂРµР¶РёРј РѕР±С‹С‡РЅРѕРіРѕ РїРѕР»СЊР·РѕРІР°С‚РµР»СЏ РґР»СЏ СЃР±РѕСЂРєРё РїСЂРѕРµРєС‚Р°.
 sudo: false
 
-# после выполнения сборки запустить скрипт, который будет собирать статистику по JaCoCo
-# Здесь используется сторонни сервис https://codecov.io/
+# РїРѕСЃР»Рµ РІС‹РїРѕР»РЅРµРЅРёСЏ СЃР±РѕСЂРєРё Р·Р°РїСѓСЃС‚РёС‚СЊ СЃРєСЂРёРїС‚, РєРѕС‚РѕСЂС‹Р№ Р±СѓРґРµС‚ СЃРѕР±РёСЂР°С‚СЊ СЃС‚Р°С‚РёСЃС‚РёРєСѓ РїРѕ JaCoCo
+# Р—РґРµСЃСЊ РёСЃРїРѕР»СЊР·СѓРµС‚СЃСЏ СЃС‚РѕСЂРѕРЅРЅРё СЃРµСЂРІРёСЃ https://codecov.io/
 after_success:
   - bash <(curl -s https://codecov.io/bash)
 
-# Отправлять уведомление на почту gasevskyv@gmail.com если сборка упала
+# РћС‚РїСЂР°РІР»СЏС‚СЊ СѓРІРµРґРѕРјР»РµРЅРёРµ РЅР° РїРѕС‡С‚Сѓ gasevskyv@gmail.com РµСЃР»Рё СЃР±РѕСЂРєР° СѓРїР°Р»Р°
 notifications:
   email:
     recipients:
@@ -20,4 +20,4 @@ notifications:
     on_failure: always # default: always
 env:
   global:
-  - CODECOV_TOKEN="6884c775-212b-40fa-9ba7-9ebbba6ddf0a"
+  - CODECOV_TOKEN='6884c775-212b-40fa-9ba7-9ebbba6ddf0a'
